compiler/testData/diagnostics/tests/annotations/missingValOnParameter.kt
annotation class Ann(
        val a: Int,
        var b: Int,
        <!MISSING_VAL_ON_ANNOTATION_PARAMETER!>c: String<!>
        )
